--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<p>footer</p>
+<div class="footer">
+  <div class="footer-links">
+    <a href="home_path"><i class="fa-thin fa-house-blank"></i></a>
+    <a href="search"><i class="fa-thin fa-compass"></i></a>
+    <a href="favourites"><i class="fa-thin fa-heart"></i></a>
+    <a href="users"><i class="fa-thin fa-user"></i></a>
+  </div>
+  <i class="fa-brands fa-instagram"></i>
+  <i class="fa-brands fa-whatsapp"></i>
+</div>
