--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,27 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <div class="heading-div d-flex justify-content-center">
+    <h1>Enter your addresses to meet halfway!</h1>
+  </div>
+    <div class="form-div d-flex justify-content-center">
+      <form>
+        <label for="Address One"></label>
+        <input class="address-input" type="text" placeholder="Address One"><br><br>
+        <label for="Address Two"></label>
+        <input class="address-input"type="text" placeholder="Address Two"><br><br>
+        <input class="button"type="button" value="+ More Address">
+      </form>
+    </div>
+      <div>
+        <div class="card">
+        <p>Coffee</p>
+        </div>
+      </div>
+
+
+</div>
+
+      <%# <p>Drinks</p>
+      <p>Food</p>
+      <p>Clubs</p>
+      <p>Cinemas</p>
+      <p>Parks</p> %>
