--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+  <!-- COMMENTED OUT NAVBAR -->
+   <!--<%# <%= render 'shared/navbar' %> %> -->
     <%= render 'shared/flashes' %>
 
     <%= yield %>
