--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,9 +1,7 @@
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<div style="width: 100%; height: 600px;"
+  data-controller="mapbox"
+  data-mapbox-markers-value="<%= @markers.to_json %>"
+  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 <br>
 <% @venues.each do |venue| %>
 <li><%= venue.name  %></li>
