--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,8 +1,10 @@
-<div style="width: 100%; height: 600px;"
+<div style="width: 100%; height: 350px;"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @markers.to_json %>"
-  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
 <br>
+
 <% @venues.each do |venue| %>
 <li><%= venue.name  %></li>
 <% end %>
