--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="heading-div d-flex justify-content-center">
+  <div class="heading-div">
     <h1>Enter your addresses to meet halfway!</h1>
   </div>
     <div class="form-div d-flex justify-content-center">
@@ -8,20 +8,42 @@
         <input class="address-input" type="text" placeholder="Address One"><br><br>
         <label for="Address Two"></label>
         <input class="address-input"type="text" placeholder="Address Two"><br><br>
-        <input class="button"type="button" value="+ More Address">
       </form>
     </div>
-      <div>
-        <div class="card">
-        <p>Coffee</p>
-        </div>
-      </div>
 
+    <div class="filter-div">
+      <div class="row mx-auto">
+            <div class="card col-md mb-2">
+                <%# <img src="https://unsplash.com/photos/nzyzAUsbV0M" alt=""> %>
+                <h2>Coffee</h2>
+            </div>
+
+            <div class="card col-md mb-2">
+                <h2>Drinks</h2>
+            </div>
+
+              <div class="card col-md mb-2">
+                <h2>Food</h2>
+            </div>
+
+            <div class="card col-md mb-2">
+                <h2>Clubs</h2>
+            </div>
+
+            <div class="card col-md mb-2">
+                <h2>Cinemas</h2>
+            </div>
+
+            <div class="card col-md mb-2">
+                <h2>Parks</h2>
+            </div>
+
+
+      </div>
+    </div>
+
+  <div class="button-div">
+  <button class="button" type="button">Meet Halfway!</button>
+  </div>
 
 </div>
-
-      <%# <p>Drinks</p>
-      <p>Food</p>
-      <p>Clubs</p>
-      <p>Cinemas</p>
-      <p>Parks</p> %>
