--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="img-div text-center">
+ <%= image_tag "halfway_logo.png" %>
+  </div>
   <div class="heading-div">
     <h1>Enter your addresses to meet halfway!</h1>
   </div>
@@ -42,7 +45,7 @@
       </div>
     </div>
 
-  <div class="button-div">
+  <div class="button-div text-center">
   <button class="button" type="button">Meet Halfway!</button>
   </div>
 
