--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
     <div class="footer">
     <div class="footer-links">
-        <i class="fas fa-heart"></i>
-        <i class="fas fa-home"></i>
-        <i class="fas fa-user"></i>
+        <a href="#"><i class="fas fa-heart"></i></a>
+        <a href="/"><i class="fas fa-home"></i></a>
+        <a href="#"><i class="fas fa-user"></i></a>
     </div>
