--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
     <%= render 'shared/flashes' %>
 
     <%= yield %>
-    <%= render 'shared/footer' %>
+    <div class="footer">
+      <%= render 'shared/footer' %>
+    </div>
   </body>
 </html>
