homepage style updated

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,8 +16,7 @@
 
     <div class="filter-div">
       <div class="row mx-auto">
-            <div class="card col-md mb-2">
-                <%# <img src="https://unsplash.com/photos/nzyzAUsbV0M" alt=""> %>
+            <div class="card col-md mb-2" style="background-image: url(https://unsplash.com/photos/nzyzAUsbV0M)">
                 <h2>Coffee</h2>
             </div>
 
