--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,12 +5,8 @@ body {
   background: url(Homepage.png);
   // background-size: 395px;
   background-repeat: no-repeat;
-  background-size: 395px 845px;
+  background-size: 395px 925px;
 }
-
-// .container {
-//   background-color: red;
-// }
 
 .img-div {
   margin-top: 50px;
@@ -28,22 +24,31 @@ h1 {
 }
 
 label {
-  margin-bottom: 95px;
+  margin-bottom: 45px;
 }
 
 .address-input {
   border: none;
   border-radius: 5px;
   background-color: #dedaf3;
-  color: black;
   text-align: center;
   padding: 8px;
   width: 300px;
   height: 45px;
+  opacity: 85%;
+}
+
+::placeholder {
+  color: black;
+  opacity: 1;
+}
+
+input:focus::placeholder {
+  color: transparent;
 }
 
 .filter-div {
-  margin-top: 100px;
+  margin-top: 35px;
 }
 
 .row {
@@ -52,10 +57,12 @@ label {
 }
 .card {
   border-radius: 15px;
+  background-color: black;
   color: white;
   padding: 2px;
   width: 100px;
   height: 100px;
+  // opacity: 50%;
 }
 
 .card img {
@@ -65,13 +72,13 @@ label {
 }
 
 .card h2 {
-  color: black;
   font-size: 20px;
   text-align: center;
-  height: 50px;
+  margin-top: 35px;
 }
 
 .card:hover {
+  opacity: 100%;
   border: 2px solid black;
   background-color: rgb(249, 171, 54);
   transition: 0.3s ease;
@@ -82,7 +89,7 @@ label {
 }
 
 .button-div {
-  padding-top: 90px;
+  margin-top: 40px;
 }
 
 .button {
