added lewagon styling to card list

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -11,8 +11,8 @@
   <img src=""/>
   <div class="card-product-infos">
     <h2><%= venue.name %></h2>
-    <p>Product description with only.</p>
-    <p><%= venue.rating %></p>
+    <p><%= venue.address %></p>
+    <p>rating: <%=venue.rating%>/5</p>
   </div>
 </div>
 <% end %>
