--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,10 +5,12 @@
 .card-product {
     overflow: hidden;
     height: 120px;
-    background: white;
+    background: #DEDAF3;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     display: flex;
     align-items: center;
+    margin: 6px;
+    border-radius: 6px;
   }
   
   .card-product img {
@@ -30,7 +32,17 @@
     margin-bottom: 0;
     margin-top: 8px;
   }
-  
+
+  .big-icon {
+      font-size: 18px;
+  }
+
+  .card-product i {
+    line-height: 1.4;
+    opacity: .7;
+    margin: 8px 6px 0 6px;
+  }
+
   .card-product .card-product-infos {
     padding: 16px;
   }
