--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -13,7 +13,7 @@
     <h2><%= venue.name %></h2>
     <p><i class="fas fa-map-marker-alt"></i> <%= venue.address %></p>
     <div class="d-flex justify-content-between">
-     <p>rating: <%=venue.rating%>/5</p>
+      <p><%="⭐️" * venue.rating %></p>
       <div class="d-flex justify-content-between">
        <i class="fas fa-share-square big-icon"></i>
        <i class="far fa-heart big-icon"></i>
