--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -11,11 +11,13 @@
 
 <% @venues.all.each do |venue| %>
 <div class="card-product">
-  <img src=""/>
+  <img src="https://www.brian-coffee-spot.com/wp-content/uploads/2020/04/Thumbnail-Kanazawaya-Coffee-Shop-Head-Office-DSC_0709t.jpg"/>
   <div class="card-product-infos">
     <h2><%= venue.name %></h2>
     <p><i class="fas fa-map-marker-alt"></i> <%= venue.address %></p>
+    <p><%= "⭐️" * (venue.rating || 0) %></p>
     <div class="d-flex justify-content-between">
+      <p><%= %></p>
       <div class="d-flex justify-content-between">
        <i class="fas fa-share-square big-icon"></i>
        <i class="far fa-heart big-icon"></i>
