--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,6 +22,13 @@ h1 {
   font-weight: 500;
   font-size: 15px;
 }
+.nice-class {
+  border-radius: 50px;
+}
+
+input.text {
+  color: red;
+}
 
 label {
   margin-bottom: 45px;
