venue index styling

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -17,7 +17,7 @@
       <h2><%= venue.name %></h2>
       <p><i class="fas fa-map-marker-alt"></i> <%= venue.address %></p>
         <div class="d-flex justify-content-between">
-        <p><%= "⭐️" * (venue.rating || 0) %></p>
+        <p><i class="fas fa-thumbs-up"></i> <%= "⭐️" * (venue.rating || 0) %></p>
         <div class="d-flex justify-content-right">
           <i class="fas fa-share-square big-icon"></i>
           <i class="far fa-heart big-icon"></i>
