--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
     <div class="footer">
     <div class="footer-links">
-        <a href="users/<%=current_user.id%>/favourites"><i class="fas fa-heart"></i></a>
+        <a href="#"><i class="fas fa-heart"></i></a>
         <a href="/"><i class="fas fa-home"></i></a>
         <a href="#"><i class="fas fa-user"></i></a>
     </div>
