--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,6 +15,7 @@ body {
 .heading-div {
   // background-color: red;
   text-align: center;
+  margin-bottom: 25px;
 }
 
 h1 {
@@ -22,19 +23,8 @@ h1 {
   font-weight: 500;
   font-size: 15px;
 }
-.nice-class {
-  border-radius: 50px;
-}
 
-input.text {
-  color: red;
-}
-
-label {
-  margin-bottom: 45px;
-}
-
-.address-input {
+.form-control {
   border: none;
   border-radius: 5px;
   background-color: #dedaf3;
@@ -43,7 +33,23 @@ label {
   width: 300px;
   height: 45px;
   opacity: 85%;
+  margin-left: 10px;
 }
+
+label {
+  margin-bottom: 45px;
+}
+
+// .address-input {
+//   border: none;
+//   border-radius: 5px;
+//   background-color: #dedaf3;
+//   text-align: center;
+//   padding: 8px;
+//   width: 300px;
+//   height: 45px;
+//   opacity: 85%;
+// }
 
 ::placeholder {
   color: black;
@@ -55,7 +61,7 @@ input:focus::placeholder {
 }
 
 .filter-div {
-  margin-top: 35px;
+  margin-top: 45px;
 }
 
 .row {
@@ -67,11 +73,23 @@ input:focus::placeholder {
   margin-top: 40px;
 }
 
-.button {
+// .button {
+//   border: none;
+//   border-radius: 4px;
+//   background-color: #dedaf3;
+//   color: black;
+//   font-size: 15px;
+//   padding: 8px;
+//   height: 40px;
+//   text-align: center;
+//   width: 200px;
+// }
+
+.btn {
   border: none;
   border-radius: 4px;
   background-color: #dedaf3;
-  color: black;
+  color: #717888;
   font-size: 15px;
   padding: 8px;
   height: 40px;
