--- a/app/views/venues/_halfway_window.html.erb
+++ b/app/views/venues/_halfway_window.html.erb
@@ -1,3 +1,3 @@
-<%= halfpoint.first.data["address"]["road"] %>
-<%= halfpoint.first.data["address"]["neighbourhood"] %>
-<%= halfpoint.first.data["address"]["postcode"] %>
+<p><%= halfpoint.first.data["address"]["road"] %></p>
+<p><%= halfpoint.first.data["address"]["neighbourhood"] %></p>
+<p><%= halfpoint.first.data["address"]["postcode"] %></p>
