--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,10 +1,10 @@
 
 <div class="venue-container">
     <div class="venue-image">
-      <img src="https://media-cdn.tripadvisor.com/media/photo-s/17/8b/e3/dd/soho-coffee-co.jpg" alt="">
+      <img src="<%=@venue.image_url%>">
     </div>
     <div class="venue-infos">
-        <div class="venue-header">
+        <div class="venue-header text-center">
           <h2><%= @venue.name %></h2>
           <h4>London</h4>
           <i class="place-holder-one fas fa-id-card"></i>
@@ -17,12 +17,13 @@
             <ul>
              <li><i class="fas fa-map-marker-alt"></i></i>  <%= @venue.address %> </li>
              <li><i class="fas fa-coffee"></i></i>  <%= @venue.category %> </li>
-             <li>4 <%="⭐️" * @venue.rating %> </li>
+             <li><%="⭐️" * @venue.rating %> </li>
              <li><i class="fas fa-clock"></i> Open 9:00am - 5:00pm</li>
-             <li><i class="fas fa-id-card"></i> talktous@sohocoffee.co.uk</li>
-             <li><i class="fas fa-phone-square-alt"></i>  01242 243 999</li>
+             <li><i class="fas fa-id-card"></i> <%= @venue.website %></li>
             </ul>
-            <%= link_to 'Back to your search', :back %>
+            <div class="d-flex justify-content-around">
+              <%= link_to 'Back to your search', :back, class: "btn-flat" %>
+            </div>
         </div>
     </div>
 </div>
