--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -7,19 +7,20 @@
         <div class="venue-header text-center">
           <h2><%= @venue.name %></h2>
           <h4>London</h4>
-          <i class="place-holder-one fas fa-id-card"></i>
-          <i class="place-holder-two fas fa-id-card"></i>
+          <h2><%="⭐️" * @venue.rating %></h2>
+          <!-- <i class="place-holder-one fas fa-id-card"></i> !-->
+          <!-- <i class="place-holder-two fas fa-id-card"></i> !-->
           <%= image_tag "shop-open.png", :class => "shop-open" %>
-          <p class="shop-open-display">Shop Open</p>
+          <p class="shop-open-display">Open</p>
           <hr>
         </div>
         <div class="venue-list">
             <ul>
              <li><i class="fas fa-map-marker-alt"></i></i>  <%= @venue.address %> </li>
-             <li><i class="fas fa-coffee"></i></i>  <%= @venue.category %> </li>
-             <li><%="⭐️" * @venue.rating %> </li>
              <li><i class="fas fa-clock"></i> Open 9:00am - 5:00pm</li>
              <li><i class="fas fa-id-card"></i> <%= @venue.website %></li>
+              <li><i class="fas fa-id-card"></i><a href="<%= @venue.GoogleMapsURL %>">Open Google Maps</a></li>
+
             </ul>
             <div class="d-flex justify-content-around">
               <%= link_to 'Back to your search', :back, class: "btn-flat" %>
