--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -19,7 +19,7 @@
              <li><i class="fas fa-map-marker-alt"></i></i>  <%= @venue.address %> </li>
              <li><i class="fas fa-clock"></i> Open 9:00am - 5:00pm</li>
              <li><i class="fas fa-id-card"></i> <%= @venue.website %></li>
-              <li><i class="fas fa-id-card"></i><a href="<%= @venue.GoogleMapsURL %>">Open Google Maps</a></li>
+              <li><i class="fas fa-id-card"></i><a href="<%= @venue.google_maps_url %>">Open Google Maps</a></li>
 
             </ul>
             <div class="d-flex justify-content-around">
