--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -1,27 +1,36 @@
 <div class="container-fluid">
-<h1>Favourites</h1>
-  <nav class="scroller">
-    <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="upcoming-tab" data-bs-toggle="tab" data-bs-target="#upcoming" type="button" role="tab" aria-controls="upcoming" aria-selected="true">Coffee</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="pending-tab" data-bs-toggle="tab" data-bs-target="#pending" type="button" role="tab" aria-controls="pending" aria-selected="false">Food</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="request-tab" data-bs-toggle="tab" data-bs-target="#request" type="button" role="tab" aria-controls="request" aria-selected="false">Drinks</button>
-      </li>
+  <h1>Favourites</h1>
+    <nav class="scroller">
+      <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Clubs</button>
-      </li>
-          </li>
+          <button class="nav-link active" id="upcoming-tab" data-bs-toggle="tab" data-bs-target="#upcoming" type="button" role="tab" aria-controls="upcoming" aria-selected="true">Coffee</button>
+        </li>
         <li class="nav-item" role="presentation">
-        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Cinemas</button>
-      </li>
-          </li>
+          <button class="nav-link" id="pending-tab" data-bs-toggle="tab" data-bs-target="#pending" type="button" role="tab" aria-controls="pending" aria-selected="false">Food</button>
+        </li>
         <li class="nav-item" role="presentation">
-        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Parks</button>
-      </li>
-    </ul>
-  </nav>
+          <button class="nav-link" id="request-tab" data-bs-toggle="tab" data-bs-target="#request" type="button" role="tab" aria-controls="request" aria-selected="false">Drinks</button>
+        </li>
+          <li class="nav-item" role="presentation">
+          <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Clubs</button>
+        </li>
+            </li>
+          <li class="nav-item" role="presentation">
+          <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Cinemas</button>
+        </li>
+            </li>
+          <li class="nav-item" role="presentation">
+          <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Parks</button>
+        </li>
+      </ul>
+    </nav>
+</div>
+
+<div class="container">
+  <% @favourites.each do |favourite| %>
+    <div class="card-product">
+      <h2><%= favourite.venue.name %></h2>
+    </div>
+  <% end %>
+
 </div>
