--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,56 +3,61 @@
 }
 
 .card-product {
-    overflow: hidden;
-    height: 120px;
-    background: #DEDAF3;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    display: flex;
-    align-items: center;
-    margin: 6px;
-    border-radius: 6px;
-  }
+  overflow: hidden;
+  height: 120px;
+  background: #DEDAF3;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  margin: 6px;
+  border-radius: 6px;
+}
 
-  .card-product img {
-    height: 100%;
-    width: 120px;
-    object-fit: cover;
-  }
+.card-product img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
 
-  .card-product h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
-  }
+.card-product h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
 
-  .card-product p {
-    font-size: 12px;
-    line-height: 1.4;
-    opacity: .7;
-    margin-bottom: 0;
-    margin-top: 8px;
-  }
+.card-product p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
 
-  .big-icon {
-      font-size: 18px;
-  }
+.big-icon {
+    font-size: 18px;
+}
 
-  .card-product i {
-    line-height: 1.4;
-    opacity: .7;
-    margin: 8px 6px 0 6px;
-  }
+.card-product i {
+  line-height: 1.4;
+  opacity: .7;
+  margin: 8px 6px 0 6px;
+}
 
-  .card-product .card-product-infos {
-    padding: 16px;
-    flex-grow: 1;
-  }
+.card-product .card-product-infos {
+  padding: 16px;
+  flex-grow: 1;
+}
 
-  .cards-container {
-    overflow-y: scroll;
-    height: 48vh;
-  }
+.cards-container {
+  overflow-y: scroll;
+  height: 48vh;
+}
+
+.favourites-card-container {
+  overflow-y: scroll;
+}
+
 .icons {
-    position: relative;
-    float: right;
+  position: relative;
+  float: right;
 }
