--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -28,7 +28,9 @@ h1 {
   border: none;
   border-radius: 5px;
   background-color: #dedaf3;
-  text-align: center;
+  color: #3f3f3f;
+  text-align: left;
+  font-size: 14px;
   padding: 8px;
   width: 300px;
   height: 45px;
@@ -87,9 +89,10 @@ input:focus::placeholder {
 
 .btn {
   border: none;
-  border-radius: 4px;
-  background-color: #dedaf3;
-  color: #717888;
+  border-radius: 10px;
+  box-shadow: -10px 0px #d3d4f2;
+  background-color: #fcfcff;
+  color: #272359;
   font-size: 15px;
   padding: 8px;
   height: 40px;
