--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,8 +9,19 @@
 
 <div class="form-div d-flex justify-content-center">
   <%= form_with url: venues_path, method: :get do |form| %>
-    <%= form.text_field :address1, placeholder: "Address One", class: "form-control mb-4 d-flex justify-content-center"%>
-    <%= form.text_field :address2, placeholder: "Address Two" ,class:"form-control" %>
+
+  <div class="input-group mb-3">
+    <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+     <%= form.text_field :address1, placeholder: "Address One", class: "form-control"%>
+  </div>
+
+    <div class="input-group mb-3">
+    <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+     <%= form.text_field :address1, placeholder: "Address Two", class: "form-control"%>
+  </div>
+
+
+
 
 
 
@@ -61,7 +72,7 @@
     </div>
 
   <div class="button-div text-center">
-    <%= form.submit value: 'Meet Halfway!', class: "btn btn-primary mb-2 rounded"%>
+    <%= form.submit value: 'Meet Halfway!', class: "btn btn-primary"%>
   <% end  %>
 </div>
     <%# <button class="button" type="button">Meet Halfway!</button> %>
