--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -26,7 +26,7 @@
     </nav>
 </div>
 
-<div class="favourites-cards-container">
+<div class="longer-cards-container">
   <% @favourites.each do |favourite| %>
     <div class="card-product">
       <img src="<%=favourite.venue.image_url%>"/>
