--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -30,7 +30,6 @@
     line-height: 1.4;
     opacity: .7;
     margin-bottom: 0;
-    margin-top: 8px;
   }
 
   .big-icon {
@@ -40,12 +39,13 @@
   .card-product i {
     line-height: 1.4;
     opacity: .7;
-    margin: 8px 6px 0 6px;
   }
 
   .card-product .card-product-infos {
     padding: 16px;
     flex-grow: 1;
+    padding: 2px;
+    margin: 4px;
   }
 
   .cards-container {
