--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -17,16 +17,10 @@
       <div class="card-product-infos">
         <h2><%= venue.name %></h2>
         <p><i class="fas fa-map-marker-alt"></i> <%= venue.address %></p>
-          <div class="d-flex justify-content-between">
+        
           <p><%= "⭐️" * (venue.rating || 0) %></p>
-          <%# <div class="icons", style="float: right;">
-              <div class="d-flex justify-content-right">
-                <i class="fas fa-share-square big-icon"></i>
-                <i class="far fa-heart big-icon"></i>
-              </div>
-          </div> %>
-      
-       </div>
+          <p><strong><%= "£" * venue.price_range %></strong></p>
+       
         <div class="icons">
            <div class="d-flex justify-content-right">
               <i class="fas fa-share-square big-icon"></i>
