got the link_to to display an icon

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -29,8 +29,8 @@
        </div>
         <div class="icons">
            <div class="d-flex justify-content-right">
-              <i class="fas fa-share-square big-icon"></i>
-              <%= link_to "heart", favourites_path(venue.id), method: :post %>
+              <%= link_to "", "/", class: "fas fa-share-square big-icon" %>
+              <%= link_to "", favourites_path(venue.id), method: :post, class: "fas fa-share-square big-icon"%>
            </div>
        </div>
       </div>
