--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -30,7 +30,11 @@
         <div class="icons">
            <div class="d-flex justify-content-right">
               <%= link_to "", "/", class: "fas fa-share-square big-icon" %>
-              <%= link_to "", favourites_path(venue.id), method: :post, class: "fas fa-share-square big-icon"%>
+              <% if Favourite.exists?(venue_id: venue.id) %>
+               <%= link_to "", favourites_path(venue.id), method: :post, class: "fas fa-heart"%>
+              <% else%>
+                 <%= link_to "", favourites_path(venue.id), method: :delete, class: "far fa-heart big-icon"%>
+              <% end %>
            </div>
        </div>
       </div>
