--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,11 +12,25 @@
   <%#= form_with url: venues_path, method: :get, data: { controller: "geocoder", geocoder_api_key_value: 'pk.eyJ1Ijoic2FjaGltcCIsImEiOiJja3o4bTg5eGQxa2owMndyeHZhamEwYTB4In0.NEtS_jJ9WE8Pz0uCVoXzzw' } do |form| %>
     <%#= form.text_field :address1, placeholder: "Address One", class: "form-control mb-4 d-flex justify-content-center", id: "address_one" %>
 
-  <%= simple_form_for :venues, url: venues_path, method: :get do |form| %>
-    <%= form.text_field :address1, placeholder: "Address One", class: "form-control mb-4 d-flex justify-content-center"%>
-    <%= form.text_field :address2, placeholder: "Address Two" ,class:"form-control" %>
 
-    <%= form.text_field :address1,
+  <%#= simple_form_for :venues, url: venues_path, method: :get do |form| %>
+    <%#= form.text_field :address1, placeholder: "Address One", class: "form-control mb-4 d-flex justify-content-center"%>
+    <%#= form.text_field :address2, placeholder: "Address Two" ,class:"form-control" %>
+
+
+<%= simple_form_for :venues, url: venues_path, method: :get do |f| %>
+    <%= f.input :address1,
+      placeholder: "Address 1", label: false,
+      input_html: { data: { geocoder_target: "address" }, class: "d-none" },
+      wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: 'pk.eyJ1Ijoic2FjaGltcCIsImEiOiJja3o4bTg5eGQxa2owMndyeHZhamEwYTB4In0.NEtS_jJ9WE8Pz0uCVoXzzw' } } %>
+
+    <%= f.input :address2,
+        placeholder: "Address 2", label: false,
+      input_html: { data: { geocoder_target: "address" }, class: "d-none" },
+      wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: 'pk.eyJ1Ijoic2FjaGltcCIsImEiOiJja3o4bTg5eGQxa2owMndyeHZhamEwYTB4In0.NEtS_jJ9WE8Pz0uCVoXzzw' } } %>
+
+
+    <%#= form.text_field :address1,
       data: { geocoder_target: "address" }, class: "d-none"%>
     <%#= form.hidden_field :address1, input_html: { data: { "..." }, class: "d-none" } %>
 
@@ -63,12 +77,12 @@
             <%= image_tag "parks.jpg" %>
                 <h2>Parks</h2>
             </div>
-
+      <%= f.button :submit, "Meet Halfway!", class: "btn btn-primary" %>
       </div>
     </div>
 
   <div class="button-div text-center">
-    <%= form.submit value: 'Meet Halfway!', class: "btn btn-primary mb-2 rounded"%>
+    <%#= form.submit value: 'Meet Halfway!', class: "btn btn-primary mb-2 rounded"%>
 </div>
   <% end %>
     <%# <button class="button" type="button">Meet Halfway!</button> %>
