made logic in the view - but the home is broken

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -31,9 +31,9 @@
            <div class="d-flex justify-content-right">
               <%= link_to "", "/", class: "fas fa-share-square big-icon" %>
               <% if Favourite.exists?(venue_id: venue.id) %>
-               <%= link_to "", favourites_path(venue.id), method: :post, class: "fas fa-heart"%>
-              <% else%>
-                 <%= link_to "", favourites_path(venue.id), method: :delete, class: "far fa-heart big-icon"%>
+               <%= link_to "", favourites_path(venue.id), method: :delete, class: "fas fa-heart"%>
+              <% else %>
+                 <%= link_to "", favourite_path(venue), method: :post, class: "far fa-heart big-icon"%>
               <% end %>
            </div>
        </div>
