--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,9 +8,26 @@
 
 
 <div class="form-div d-flex justify-content-center">
+
   <%= form_with url: venues_path, method: :get do |form| %>
+
+  <div class="input-group mb-3">
+    <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+     <%= form.text_field :address1, placeholder: "Address One", class: "form-control"%>
+  </div>
+
+    <div class="input-group mb-3">
+    <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+     <%= form.text_field :address1, placeholder: "Address Two", class: "form-control"%>
+  </div>
+
+
+
+
+  <%= simple_form_for :venues, url: venues_path, method: :get do |form| %>
     <%= form.text_field :address1, placeholder: "Address One", class: "form-control mb-4 d-flex justify-content-center"%>
     <%= form.text_field :address2, placeholder: "Address Two" ,class:"form-control" %>
+  <% end %>
 
 
 
@@ -27,46 +44,44 @@
 
     <div class="filter-div">
       <div class="row mx-auto">
-            <div class="card col-md mb-2">
-            <%= image_tag "coffee.jpg" %>
-                <h2>Coffee</h2>
-            </div>
+        <div class="card col-md mb-2">
+        <%= image_tag "coffee.jpg" %>
+            <h2>Coffee</h2>
+        </div>
 
-            <div class="card col-md mb-2">
-            <%= image_tag "drinks.jpg" %>
-                <h2>Drinks</h2>
-            </div>
+        <div class="card col-md mb-2">
+        <%= image_tag "drinks.jpg" %>
+            <h2>Drinks</h2>
+        </div>
 
-              <div class="card col-md mb-2">
-              <%= image_tag "food.png" %>
-                <h2>Food</h2>
-            </div>
+          <div class="card col-md mb-2">
+          <%= image_tag "food.png" %>
+            <h2>Food</h2>
+        </div>
 
-            <div class="card col-md mb-2">
-            <%= image_tag "clubs.jpg" %>
-                <h2>Clubs</h2>
-            </div>
+        <div class="card col-md mb-2">
+        <%= image_tag "clubs.jpg" %>
+            <h2>Clubs</h2>
+        </div>
 
-            <div class="card col-md mb-2">
-            <%= image_tag "cinema.png" %>
-                <h2>Cinemas</h2>
-            </div>
+        <div class="card col-md mb-2">
+        <%= image_tag "cinema.png" %>
+            <h2>Cinemas</h2>
+        </div>
 
-            <div class="card col-md mb-2">
-            <%= image_tag "parks.jpg" %>
-                <h2>Parks</h2>
-            </div>
-
+        <div class="card col-md mb-2">
+        <%= image_tag "parks.jpg" %>
+            <h2>Parks</h2>
+        </div>
       </div>
     </div>
 
   <div class="button-div text-center">
-    <%= form.submit value: 'Meet Halfway!', class: "btn btn-primary mb-2 rounded"%>
-  <% end  %>
-</div>
-    <%# <button class="button" type="button">Meet Halfway!</button> %>
+    <%= form.submit value: 'Meet Halfway!', class: "btn btn-primary"%>
+    <% end  %>
   </div>
-
+    <%# <button class="button" type="button">Meet Halfway!</button> %>
+</div>
 
 
 
