home page working and there is two forms

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,6 +62,7 @@
 
         <div class="button-div text-center">
         <%= form.submit value: 'Meet Halfway!', class: "btn btn-primary"%>
+         <% end  %>
       </div>
     <% end  %>
   </div>
