--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,12 +36,12 @@
 
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-        <%= f.text_field :address1, placeholder: "Address One", class: "form-control"%>
+        <%#= f.text_field :address1, placeholder: "Address One", class: "form-control"%>
       </div>
 
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-        <%= f.text_field :address1, placeholder: "Address Two", class: "form-control"%>
+        <%#= f.text_field :address1, placeholder: "Address Two", class: "form-control"%>
       </div>
 
 
