logic for making a favourite works, and it displays correctly in favourites index

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -27,7 +27,7 @@
               <% if Favourite.exists?(venue_id: venue.id) %>
                <%= link_to "", favourites_path(venue.id), method: :delete, class: "fas fa-heart"%>
               <% else %>
-                 <%= link_to "", favourite_path(venue), method: :post, class: "far fa-heart big-icon"%>
+                 <%= link_to "", favourites_path(venue.id), method: :post, class: "far fa-heart big-icon"%>
               <% end %>
            </div>
        </div>
