updated the footer home and favourites buttons to go to the correct places

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
     <div class="footer">
     <div class="footer-links">
-        <a href="#"><i class="fas fa-heart"></i></a>
-        <a href="/"><i class="fas fa-home"></i></a>
+        <%= link_to "", favourites_path, class: "fas fa-heart" %>
+        <%= link_to "", root_path, class: "fas fa-home"  %>
         <a href="#"><i class="fas fa-user"></i></a>
     </div>
