commented out the profile page button while I sort out the root page

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,5 +2,5 @@
     <div class="footer-links">
         <%= link_to "", favourites_path, class: "fas fa-heart" %>
         <%= link_to "", root_path, class: "fas fa-home"  %>
-        <a href="#"><i class="fas fa-user"></i></a>
+        <%#= link_to "", user_path(current_user.id), class: "fas fa-user" %>
     </div>
