--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
         <div class="user-details">
             <h3>Lucy_89</h3>
             <h2>Kings Cross</h2>
+            <%#= button_to "logout", destroy_user_session_path, method: :delete  %>
         </div>
     </div>
     <div>
