--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -25,9 +25,9 @@
           <div class="d-flex justify-content-right">
             <%= link_to "", "/", class: "fas fa-share-square big-icon" %>
             <% if Favourite.exists?(venue_id: venue.id) %>
-              <%= link_to "", favourite_path(venue.id), method: :delete, class: "fas fa-heart"%>
+              <%= link_to "", favourite_path(venue.favourites.first), method: :delete, class: "fas fa-heart"%>
             <% else %>
-              <%= link_to "", favourites_path(venue.id), method: :post, class: "far fa-heart big-icon"%>
+              <%= link_to "", favourites_path(venue.id), method: :post, class: "far fa-heart big-icon", :remote => true %>
             <% end %>
           </div>
        </div>
