added a placeholder user icon while I work on sign-in/out logic on another branch

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,5 +2,6 @@
     <div class="footer-links">
         <%= link_to "", favourites_path, class: "fas fa-heart" %>
         <%= link_to "", root_path, class: "fas fa-home"  %>
+        <i class="fas fa-user"></i>
         <%#= link_to "", user_path(current_user.id), class: "fas fa-user" %>
     </div>
