--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,10 +34,7 @@
       data: { geocoder_target: "address" }, class: "d-none"%>
     <%#= form.hidden_field :address1, input_html: { data: { "..." }, class: "d-none" } %>
 
-      <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-        <%#= f.text_field :address1, placeholder: "Address One", class: "form-control"%>
-      </div>
+     rai
 
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
